--- a/toy-problems/index.html
+++ b/toy-problems/index.html
@@ -6,6 +6,6 @@
   <title>toyProblems</title>
 </head>
 <body>
-  <script src="StudentGradeCalculator.js" ></script>
+  <script src="NetSalaryCalculator.js" src="StudentGradeCalculator.js" src="SpeedDetector.js"></script>
 </body>
 </html>
